[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/2d/corridor.jpg" type="Texture" id=1]
[ext_resource path="res://scripts/Clickable.gd" type="Script" id=2]
[ext_resource path="res://scenes/Hallway.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/Dialogue_Font.tres" type="DynamicFont" id=4]

[node name="Scene" type="Node2D"]
script = ExtResource( 3 )

[node name="Hallway_Background" type="Sprite" parent="."]
position = Vector2( 566.886, 360.992 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="Objects" type="Node2D" parent="."]

[node name="Bedroom" type="Button" parent="Objects"]
margin_left = 447.0
margin_top = 267.0
margin_right = 517.0
margin_bottom = 481.0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bathroom" type="Button" parent="Objects"]
margin_left = 621.0
margin_top = 235.0
margin_right = 667.0
margin_bottom = 491.0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="Button" parent="Objects"]
margin_left = 536.0
margin_top = 291.0
margin_right = 593.0
margin_bottom = 411.0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Upstairs" type="Button" parent="Objects"]
margin_left = 5.0
margin_top = 519.0
margin_right = 1079.0
margin_bottom = 661.0
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Label" parent="."]
margin_right = 435.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Objects/Bedroom" to="." method="_on_Bedroom_pressed"]
[connection signal="pressed" from="Objects/Bathroom" to="." method="_on_Bathroom_pressed"]
[connection signal="pressed" from="Objects/Door" to="." method="_on_Door_pressed"]
[connection signal="pressed" from="Objects/Upstairs" to="." method="_on_Upstairs_pressed"]
